9. Added support for AMD hipcc and hcc compilers with ROCm. 
10. Added support for compiler-based instrumentation for hipcc and hcc.
11. Fixed a bug with TAU_SELECT_FILE. 
12. Added support for -roctracer=<dir>. Use with tau_exec -T roctracer -rocm ./a.out. 
13. Added support for the region push/pop interface of Kokkos Profiling API. 


Version 2.27 changes (from 2.26):
1. Updated JOGL in ParaProf to JOGL2 to support 64 bit 3D window displays.
2. Added support for Mac OS X with PDT, EBS, MPI, and Compiler based instrumentation.
3. Updated PEBIL support in TAU in tau_pebil_rewrite with PDT 3.25. 
4. Added a pycoolr based GUI for online performance evaluation using BEACON and SOS Flow. 
5. Fixed MPI bugs for collective operations. 
6. Updated PMI support in TAU for topology displays for Cray. 
7. Added support for the Caliper API in TAU. 
8. Updated support for DyninstAPI 9.3.2 in TAU. 
9. Updated pthread wrapper support in TAU for use with OpenMP. 
10. Added support for LIKWID (configure -likwid=download; export TAU_METRICS=TIME,LIKWID_<event>).
11. Added preliminary support for CUDA 9.0 and NVLink. 
12. Updated support for SGI MPT MPI wrapper. 
13. Added support for compiler-based instrumentation for LLVM compilers and tested on IBM Power 8 Linux and Cray XC40 with KNL platforms.
14. Added support for flang compiler-based instrumentation. 
15. Added support for IBM Power 9 MVAPICH2 compilers. 
16. Added support for OMPT TR6 (configure -ompt=download-tr6 with export TAU_OMPT_SUPPORT_LEVEL=full). 
17. Added support for LIKWID 4.3.2.
18. Added Python args support. 
19. Added support for armflang and armclang/armclang++ compilers. 
20. Added -dyninst=download option to simplify installation of DyninstAPI and use with TAU. 
21. Updated support for TAU's OMPT TR6 (-download=ompt-tr6). 
22. Updated TAU's ParaTools Threadspotter [www.threadspotter.com] support in tau_exec (-ptts). 