@@ -24,6 +24,7 @@ Version 2.28 changes (from 2.27):
 11. Fixed a bug with TAU_SELECT_FILE. 
 12. Added support for -roctracer=<dir>. Use with tau_exec -T roctracer -rocm ./a.out. 
 13. Added support for the region push/pop interface of Kokkos Profiling API. 
+14. Added support for chrome trace viewer output from tau_trace2json.
 
 
 Version 2.27 changes (from 2.26):
